--- a/src/styles/blocks/skills-list.pcss
+++ b/src/styles/blocks/skills-list.pcss
@@ -27,6 +27,9 @@
     }
     &__name {
         text-align: center;
+        font-family: 'Bodoni Ultra';
+        font-size: 14px;
+        letter-spacing: 2px;
     }
     &__skill {
         position: absolute;
