--- a/src/styles/blocks/tags.pcss
+++ b/src/styles/blocks/tags.pcss
@@ -18,5 +18,8 @@
         color: rgba(40, 51, 64, .7);
         font-size: 15px;
         font-weight: 600;
+        font-family: 'Bodoni Ultra';
+        text-transform: uppercase;
+        letter-spacing: 3px;
     }
 }
