--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -18,11 +18,14 @@
 }
 .user-info {
     margin-bottom: 5px;
+    font-family: 'Parisian';
+    font-size: 28px;
+
     &__title {
         opacity: 0.15;
         color: #fff;
         font-weight: 600;
-        line-height: 30px;
+        line-height: 34px;
         min-width: 170px;
         display: inline-block;
 
