--- a/src/styles/sections/footer.pcss
+++ b/src/styles/sections/footer.pcss
@@ -26,7 +26,6 @@
     &__hero-name {
         display: block;
         font-size: 18px;
-        font-weight: 700;
         line-height: 30px;
         text-transform: uppercase;
         margin-bottom: 20px;
@@ -64,6 +63,7 @@
             line-height: 30px !important;
             text-decoration: none !important;
             font-family: 'Parisian';
+            font-size: 24px;
         }
     }
 
