--- a/src/styles/blocks/person.pcss
+++ b/src/styles/blocks/person.pcss
@@ -17,15 +17,18 @@
     }
     &__name {
         color: #fff;
-        font-size: 18px;
+        font-size: 24px;
         font-weight: 700;
         display: block;
         margin-bottom: 10px;
+        font-family: 'Parisian';
     }
     &__occ {
         opacity: 0.3;
         color: #fff;
         font-weight: 700;
+        font-weight: 24px;
         display: block;
+        font-family: 'Parisian';
     }
 }
