All new fonts and fix bugs

--- a/src/index.pug
+++ b/src/index.pug
@@ -34,6 +34,8 @@ body
                             #message-component
                     .wrapper-bottom__right
                         #leafs-component
-                        
             footer.footer
                 #footer-component
+        .wrong-orientation
+            .hero-title__name 
+    
