--- a/src/styles/blocks/link.pcss
+++ b/src/styles/blocks/link.pcss
@@ -12,6 +12,7 @@
         font-weight: 700;
         line-height: 48px;
         display: inline-block;
-        font-family: 'Open Sans', sans-serif !important;
+        font-style: italic;
+        font-family: 'Bodoni Ultra' !important;
     }
 }
