--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -29,6 +29,7 @@
 
     &--dark {
         color: #2b3948;
+        font-family: 'Bodoni Ultra';
         @include phones() {
             margin: 0 auto;
         }
