--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -5,3 +5,28 @@
 @import "./layout/base.pcss";
 @import './blocks/*.pcss';
 @import './sections/*.pcss';
+
+.wrong-orientation {
+    display: none;
+}
+
+@media screen and (max-height: 480px) {
+    .wrong-orientation {
+        display: block;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        width: auto;
+        height: auto;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        
+        .hero-title__name {
+            margin: 0;
+        }
+    }
+    .maincontent {
+        display: none;
+    }
+}
