--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -18,8 +18,8 @@
             border: 3px solid #f29400;
             background: rgba(0, 0, 0, 0);
             position: absolute;
-            height: 94px;
-            width: 154px;
+            height: 100%;
+            width: 100%;
             left: 0;
             top: 0;
             transition: ease-in-out .2s;
@@ -38,6 +38,7 @@
 
     &__thumb-link {
         position: absolute;
+        height: 100%;
     }
 
     &__image {
@@ -47,8 +48,9 @@
         box-shadow: 0.25rem 0.1875rem 1.25rem rgba(0,0,0,.07);
     }
     &__small-image {
-
-        
+        object-fit: cover;
+        width: 100%;
+        height: 100% !important;
     }
     &__slider {
         bottom: 60px;
