--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -2,14 +2,19 @@
 
     &__pic {
         display: block;
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
+        width: 90%;
+        height: 90%;
         margin-bottom: 70px;
+        transform: scale(0.01) rotateZ(1800deg);
+        transition: 1s ease-in-out;
+
+        &.active {
+            transform: scale(1);
+        }
 
         @include tablets() {
-            width: 170px;
-            height: 170px;
+            width: 100%;
+            height: 100%;
         }
         @include phones() {
             margin: 0 auto 25px;
@@ -26,7 +31,7 @@
         color: #fff;
         font-weight: 600;
         line-height: 34px;
-        min-width: 170px;
+        min-width: 130px;
         display: inline-block;
 
         @include tablets() {
