A little font changes, new content

--- a/src/styles/blocks/hero-title.pcss
+++ b/src/styles/blocks/hero-title.pcss
@@ -68,7 +68,7 @@
 
         &--small {
             display: block;
-            font-size: 36px;
+            font-size: 48px;
             line-height: 48px;
             width: auto;
             margin-left: 0;
@@ -78,12 +78,17 @@
                 margin: 0;
                 text-align: left;
                 width: 40%;
+                font-size: 36px;
             }
         }
     }
 
     &__about {
-        margin-bottom: 25px;
+        margin-bottom: 40px;
+
+        @include tablets() {
+            margin-bottom: 20px;
+        }
     }
 
     &--parallax {
