--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -2,7 +2,7 @@ script(type="text/x-template")#skills-block
     .container.container__skills
         .skills__right
             h2.title How can I help you
-            .content.skills__content I made this site as part of my studies at LoftSchool Online Education School. A little later I will refresh my content in it. In the meantime, see how everything is cool and beautiful here!
+            .content.skills__content I made this site as part of my studies at LoftSchool Online Education School. But it's not over yet. Work on the site continues, and much has changed. Starting with design, effects and content, ending with the length of the orange stripes at the bottom :)
             .skills__widget
                 .skills-container
                     .skills-block(v-for="category in categories" :key="category.id")
