--- a/src/styles/blocks/person.pcss
+++ b/src/styles/blocks/person.pcss
@@ -26,8 +26,7 @@
     &__occ {
         opacity: 0.3;
         color: #fff;
-        font-weight: 700;
-        font-weight: 24px;
+        font-size: 24px;
         display: block;
         font-family: 'Parisian';
     }
