--- a/src/styles/blocks/preloader.pcss
+++ b/src/styles/blocks/preloader.pcss
@@ -6,7 +6,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    transition: ease-in-out 1.5s;
+    transition: ease-in-out .5s;
 
     &.done {
         opacity: 0;
