Section size full screen. Works section redesign

--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -80,15 +80,14 @@
     }
     &:after {
         content: attr(data-slide);
-        color: #f0f0f0;
-        font-size: 400px;
+        color: rgba(242, 148, 0, .1);;
+        font-size: 1600px;
         font-weight: 900;
-        line-height: 1;
+        line-height: .5;
         height: 355px;
         bottom: 160px;
-        right: -150px;
+        left: 300px;
         position: absolute;
-        /* z-index: -1; */
 
         @include phones() {
             display: none;
