--- a/src/styles/sections/about.pcss
+++ b/src/styles/sections/about.pcss
@@ -2,6 +2,7 @@
     background: url("../images/bg/bg_about.jpg") top center no-repeat;
     background-size: cover;
     width: 100vw;
+    min-height: 100vh;
     position: relative;
     z-index: 50;
 
