--- a/src/styles/sections/works.pcss
+++ b/src/styles/sections/works.pcss
@@ -2,6 +2,7 @@
     background: #ffffff;
     z-index: 50;
     position: relative;
+    min-height: 100vh;
     &__left {
         width: 60%;
 
@@ -15,6 +16,8 @@
     }
     &__right {
         width: 30%;
+        position: relative;
+        padding: 100px 0;
 
         @include desktop() {
             width: 100%;
