Added new animation, fixed bug with form content, changed works section

--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -80,14 +80,15 @@
     }
     &:after {
         content: attr(data-slide);
-        color: rgba(242, 148, 0, .1);;
-        font-size: 1600px;
-        font-weight: 900;
+        color: rgba(232,211,168, .3);
+        font-size: 1300px;
+        /* font-weight: 900; */
         line-height: .5;
         height: 355px;
-        bottom: 160px;
-        left: 300px;
+        top: 20px;
+        left: 100px;
         position: absolute;
+        font-family: 'Michelle';
 
         @include phones() {
             display: none;
