--- a/src/styles/sections/contact.pcss
+++ b/src/styles/sections/contact.pcss
@@ -7,7 +7,7 @@
     }
     
     .title {
-        @include desktop() {
+        @include phones() {
             text-align: center;
         }
     }
