--- a/src/styles/sections/works.pcss
+++ b/src/styles/sections/works.pcss
@@ -3,6 +3,8 @@
     z-index: 50;
     position: relative;
     min-height: 100vh;
+    overflow: hidden;
+    
     &__left {
         width: 60%;
 
