--- a/src/templates/components/message.pug
+++ b/src/templates/components/message.pug
@@ -1,7 +1,7 @@
 script(type="text/x-template")#message-block
     .message-wrap
         h2.title.title--big Contact with me
-        form.md-layout(name="message" novalidate='', action='https://formspree.io/mr.dmit@gmail.com' method='POST' @submit.prevent="sendMessage")
+        form.md-layout(name="message" novalidate='', action='https://formspree.io/mr.dmit@gmail.com' method='POST' @submit.prevent="validateUser")
             md-card.md-layout-item.md-size-100.md-small-size-100.form__block
                 md-card-content
                     .md-layout.md-gutter
@@ -9,20 +9,20 @@ script(type="text/x-template")#message-block
                             md-field(:class="getValidationClass('firstName')")
                                 label(for='first-name').form__label <i class="fab fa-redhat fa-2x" style="margin-right: 15px; opacity: .3;"></i> <span>Name</span>
                                 md-input#first-name(name='name', autocomplete='given-name', v-model='form.firstName', :disabled='sending' required).form__input
-                                    span.md-error(v-if='!$v.form.firstName.required') The first name is required
-                                    span.md-error(v-else-if='!$v.form.firstName.minlength') Invalid first name
+                                span.md-error(v-if='!$v.form.firstName.required') The first name is required
+                                span.md-error(v-else-if='!$v.form.firstName.minLength') Invalid first name
                         .md-layout-item.md-small-size-100
                             md-field(:class="getValidationClass('email')")
                                 label(for='email').form__label <i class="fas fa-dove fa-2x" style="margin-right: 15px; opacity: .3;"></i> <span>Email</span>
                                 md-input#email(type='email', name='email', autocomplete='email', v-model='form.email', :disabled='sending' required).form__input
-                                    span.md-error(v-if='!$v.form.email.required') The email is required
-                                    span.md-error(v-else-if='!$v.form.email.email') Invalid email
+                                span.md-error(v-if='!$v.form.email.required') The email is required
+                                span.md-error(v-else-if='!$v.form.email.email') Invalid email
                             
                     md-field(:class="getValidationClass('message')")
                         label.form__label <i class="fas fa-pen-fancy fa-2x" style="margin-right: 15px; opacity: .3;"></i> <span>Your message</span>
                         md-textarea(v-model='form.message', md-autogrow, name='message', :disabled='sending' required maxlength="300").form__input.form__input--textarea
-                            span.md-error(v-if='!$v.form.message.required') The message is required
-                            span.md-error(v-else-if='!$v.form.message.minlength') Invalid message
+                        span.md-error(v-if='!$v.form.message.required') The message is required
+                        span.md-error(v-else-if='!$v.form.message.minlength') Invalid message
                 md-progress-bar(md-mode='indeterminate', v-if='sending')
                 md-card-actions
                     md-button.md-primary.md-raised.button.button--send(type='submit', :disabled='sending') Send
